# lachesis

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresets.json.example  README.md  callback.h  config.json  config.yaml  noise.h  runtime.h  runtime_interface.cpp  thread.cpp  thread.h  tool.h  types.h  types_not_yet_used.h
LAChesis-runtimelib/: CMakeLists.txt  callback.h  config.cpp  config.h  lachesis_types.h  noise.h  runtime.cpp  runtime.h  runtime_interface.cpp  sv-comp_impl.cpp  thread.cpp  thread.h  tool.cpp  types.h  utils.h
LAChesis-runtimelib/analysers/: analysers.h  atomrace.cpp  fasttrack2.cpp
analysers/: eraser.cpp
